--- a/templates/system_admin/notification_management.html
+++ b/templates/system_admin/notification_management.html
@@ -376,7 +376,7 @@ $(document).ready(function() {
                 'type': notificationType
             },
             beforeSend: function() {
-                $('#testNotificationForm button[type=submit]').prop('disabled', true).html('<i class="fas fa-spinner fa-spin"></i> Sending...');
+                setButtonLoading('#testNotificationForm button[type=submit]', true, 'Sending...');
             },
             success: function(response) {
                 if (response.success) {
@@ -390,7 +390,7 @@ $(document).ready(function() {
                 alert('❌ Error sending test notification');
             },
             complete: function() {
-                $('#testNotificationForm button[type=submit]').prop('disabled', false).html('<i class="fas fa-paper-plane"></i> Send Test Notification');
+                setButtonLoading('#testNotificationForm button[type=submit]', false);
             }
         });
     });
