--- a/templates/system_admin/setup_tenant_mpesa.html
+++ b/templates/system_admin/setup_tenant_mpesa.html
@@ -492,9 +492,9 @@ $(document).ready(function() {
         }
         
         // Show loading
-        btn.prop('disabled', true).html('<i class="fas fa-spinner fa-spin mr-2"></i>Testing...');
+        setButtonLoading(btn[0], true, 'Testing...');
         result.removeClass('test-success test-error').addClass('test-loading').show();
-        result.html('<i class="fas fa-spinner fa-spin mr-2"></i>Testing connection to M-Pesa API...');
+        setElementLoading(result[0], true, 'Testing connection to M-Pesa API...');
         
         // Make request
         $.ajax({
@@ -524,7 +524,8 @@ $(document).ready(function() {
                 result.html('<i class="fas fa-times mr-2"></i>Error testing connection. Please try again.');
             },
             complete: function() {
-                btn.prop('disabled', false).html('<i class="fas fa-plug mr-2"></i>Test Connection Now');
+                setButtonLoading(btn[0], false);
+                setElementLoading(result[0], false);
             }
         });
     });
