--- a/templates/system_admin/sms/test_sms.html
+++ b/templates/system_admin/sms/test_sms.html
@@ -241,15 +241,12 @@ document.addEventListener('DOMContentLoaded', function() {
     const sendBtn = document.getElementById('sendBtn');
     
     if (form && sendBtn) {
-        const originalBtnText = sendBtn.innerHTML;
         
         form.addEventListener('submit', function() {
-            sendBtn.disabled = true;
-            sendBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Sending...';
+            setButtonLoading(sendBtn, true, 'Sending...');
             
             setTimeout(function() {
-                sendBtn.disabled = false;
-                sendBtn.innerHTML = originalBtnText;
+                setButtonLoading(sendBtn, false);
             }, 5000);
         });
     }
