--- a/static/css/data-table.css
+++ b/static/css/data-table.css
@@ -550,32 +550,8 @@
     }
 }
 
-/* Loading State */
-.data-table-loading {
-    position: relative;
-    min-height: 200px;
-    background: var(--gray-50);
-}
-
-.data-table-loading::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 32px;
-    height: 32px;
-    border: 3px solid var(--gray-200);
-    border-top-color: var(--autowash-primary);
-    border-radius: 50%;
-    animation: data-table-spin 1s linear infinite;
-}
-
-@keyframes data-table-spin {
-    to {
-        transform: translate(-50%, -50%) rotate(360deg);
-    }
-}
+/* Loading State - Migrated to unified AutoWash Manager loading system */
+/* Use setElementLoading() from AutoWash Manager instead of data-table-loading class */
 
 /* Color Variables */
 :root {
