--- a/static/css/services.css
+++ b/static/css/services.css
@@ -1218,31 +1218,8 @@
     margin: 0;
 }
 
-/* Table Loading State */
-.nexus-table-loading {
-    position: relative;
-    min-height: 200px;
-}
-
-.nexus-table-loading::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 32px;
-    height: 32px;
-    border: 3px solid var(--nexus-light-border);
-    border-top-color: var(--nexus-accent);
-    border-radius: 50%;
-    animation: nexus-table-loading-spin 1s linear infinite;
-}
-
-@keyframes nexus-table-loading-spin {
-    to {
-        transform: translate(-50%, -50%) rotate(360deg);
-    }
-}
+/* Table Loading State - Migrated to unified AutoWash Manager loading system */
+/* Use setElementLoading() from AutoWash Manager instead of nexus-table-loading class */
 
 /* Table Filters */
 .nexus-table-filters {
