Expense template updates

--- a/templates/expenses/category_list.html
+++ b/templates/expenses/category_list.html
@@ -293,13 +293,7 @@
                 <div class="summary-icon bg-info text-white">
                     <i class="fas fa-receipt"></i>
                 </div>
-                <div class="summary-number">
-                    {% for category in categories %}
-                        {{ category.expense_count|add:forloop.counter0|default:0 }}
-                    {% empty %}
-                        0
-                    {% endfor %}
-                </div>
+                <div class="summary-number">{{ total_expenses }}</div>
                 <div class="summary-label">Total Expenses</div>
             </div>
         </div>
@@ -309,13 +303,7 @@
                 <div class="summary-icon bg-warning text-white">
                     <i class="fas fa-chart-line"></i>
                 </div>
-                <div class="summary-number">KSh
-                    {% for category in categories %}
-                        {{ category.total_expense_amount|add:forloop.counter0|default:0|floatformat:0 }}
-                    {% empty %}
-                        0
-                    {% endfor %}
-                </div>
+                <div class="summary-number">KSh {{ total_amount|floatformat:0 }}</div>
                 <div class="summary-label">Total Amount</div>
             </div>
         </div>
