--- a/templates/expenses/vendor_list.html
+++ b/templates/expenses/vendor_list.html
@@ -314,13 +314,7 @@
                 <div class="summary-icon bg-info text-white">
                     <i class="fas fa-receipt"></i>
                 </div>
-                <div class="summary-number">
-                    {% for vendor in vendors %}
-                        {{ vendor.expense_count|add:forloop.counter0|default:0 }}
-                    {% empty %}
-                        0
-                    {% endfor %}
-                </div>
+                <div class="summary-number">{{ total_expenses }}</div>
                 <div class="summary-label">Total Expenses</div>
             </div>
         </div>
@@ -330,13 +324,7 @@
                 <div class="summary-icon bg-warning text-white">
                     <i class="fas fa-chart-line"></i>
                 </div>
-                <div class="summary-number">KSh
-                    {% for vendor in vendors %}
-                        {{ vendor.total_expense_amount|add:forloop.counter0|default:0|floatformat:0 }}
-                    {% empty %}
-                        0
-                    {% endfor %}
-                </div>
+                <div class="summary-number">KSh {{ total_amount|floatformat:0 }}</div>
                 <div class="summary-label">Total Amount</div>
             </div>
         </div>
