Commison system update

--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -259,10 +259,18 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link {% if request.resolver_match.url_name == 'quotation_list' %}active{% endif %}" 
+                            <a class="nav-link {% if request.resolver_match.url_name == 'quotation_list' %}active{% endif %}"
                                href="/business/{{ request.tenant.slug }}/services/quotations/">
                                 <i class="nav-icon fas fa-file-invoice-dollar"></i>
                                 <span class="nav-text">Quotations</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link {% if 'commission' in request.resolver_match.url_name %}active{% endif %}"
+                               href="/business/{{ request.tenant.slug }}/services/commissions/">
+                                <i class="nav-icon fas fa-coins"></i>
+                                <span class="nav-text">Commission Management</span>
                             </a>
                         </li>
                         {% endif %}
